--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -33,3 +33,10 @@
   width: 300px;
   height: 400px;
 }
+
+.mybox {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: blueviolet;
+}
