update frontend project

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -40,3 +40,16 @@
 .read-the-docs {
   color: #888;
 }
+
+.purchase-form {
+  padding: 1em;
+}
+
+.dialog-modal {
+  position: absolute;
+  top: 50%;
+  transform: translate(0%, -50%);
+  border: 1px solid black;
+  border-radius: 20px;
+  box-shadow: 10px 10px 5px #111111;
+}
