--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -53,3 +53,9 @@
   border-radius: 20px;
   box-shadow: 10px 10px 5px #111111;
 }
+
+button {
+  background: #552583;
+  margin-left: 1em;
+  margin-right: 1em;
+}
