--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,87 +1,89 @@
 #root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
+    max-width: 1280px;
+    margin: 0 auto;
+    padding: 2rem;
+    text-align: center;
 }
 
 .logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
+    height: 6em;
+    padding: 1.5em;
+    will-change: filter;
+    transition: filter 300ms;
 }
+
 .logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
+    filter: drop-shadow(0 0 2em #646cffaa);
 }
+
 .logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+    filter: drop-shadow(0 0 2em #61dafbaa);
 }
 
 @keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+    from {
+        transform: rotate(0deg);
+    }
+    to {
+        transform: rotate(360deg);
+    }
 }
 
 @media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
+    a:nth-of-type(2) .logo {
+        animation: logo-spin infinite 20s linear;
+    }
 }
 
 .card {
-  padding: 2em;
+    padding: 2em;
 }
 
 .read-the-docs {
-  color: #888;
+    color: #888;
 }
 
 .purchase-form {
-  padding: 1em;
+    padding: 1em;
 }
 
 .dialog-modal {
-  position: absolute;
-  top: 50%;
-  transform: translate(0%, -50%);
-  border: 1px solid black;
-  border-radius: 20px;
-  box-shadow: 10px 10px 5px #111111;
+    position: absolute;
+    top: 50%;
+    transform: translate(0%, -50%);
+    border: 1px solid black;
+    border-radius: 20px;
+    box-shadow: 10px 10px 5px #111111;
 }
 
 button {
-  background: #552583;
-  margin-left: 1em;
-  margin-right: 1em;
+    background: #552583;
+    margin-left: 1em;
+    margin-right: 1em;
 }
 
 .table-data {
-  width: 100%;
+    width: 100%;
 }
 
 .drop-down {
-  margin-top: 0.5em;
-  margin-bottom: 0.5em;
-}
-
-.main-table {
-  position: absolute;
-  top: 25%;
-  transform: translate(-50%, -50%);
-  width: 75vw;
+    margin-top: 0.5em;
+    margin-bottom: 0.5em;
 }
 
 .navbar {
-  position: fixed;
-  top: 0;
-  width: 100vw;
+    position: fixed;
+    top: 0;
+    width: 100vw;
 }
 
 .navbar-buttons {
-  color: #FDB927;
+    color: #FDB927;
+}
+
+.page-div {
+    position: fixed;
+    top: 100px;
+    width: 75vw;
+    transform: translate(-50%, 0%);
 }
