CI: Rearrange form components and set api target to 0.0.0.0

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -83,7 +83,15 @@ button {
 
 .page-div {
     position: fixed;
-    top: 100px;
-    width: 75vw;
-    transform: translate(-50%, 0%);
+    width: 100vw;
+    height: 100vh;
+    transform: translate(-50%, -40%);
+    overflow-y: scroll;
+}
+
+.page-table {
+    /*position: fixed;*/
+    /*width: 75vw;*/
+    /*height: 100vh;*/
+    /*transform: translate(15%, 0%);*/
 }
